# cereal

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build-script.yml
src/: CMakeLists.txt  asdf.cpp  cereal.cpp  garbage.cpp
src/include/cereal/: cereal.hpp  types.def
